Revamp grid and make construction component

--- a/src/pages/posts/2020-06-14-Summer_Reading.mdx
+++ b/src/pages/posts/2020-06-14-Summer_Reading.mdx
@@ -1,24 +1,33 @@
-import Grid from "../../components/grid"
+import Books from "../../components/books"
+import Construction from "../../components/construction"
 
 # Summer Reading
 
+<Construction />
+
 I love to read. Here's a collection of the books that I am aiming to read this summer. Some are required for school and some are not, but in my opinion, they're all pretty intereesting. As I finish these books, I will be writing posts about them.
 
-<Grid >
+<Books >
 
-- ![Good Economics for Hard Times](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1562348201l/51014619._SX318_SY475_.jpg)
-  **Good Economics for Hard Times** _Abhijit V. Banerjee and Esther Duflo_
-- ![Freakonomics](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1550917827l/1202._SX318_.jpg)
-  **Freakonomics: A Rogue Economist Explores the Hidden Side of Everything** _Steven D. Levitt and Stephen J. Dubner_
-- ![The Invention of Russia](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1453057553l/27246121.jpg)
-  **The Invention of Russia** _Arkady Ostrovsky_
-- ![An Introduction to Political Philosophy](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1386920670l/31851.jpg)
-  **An Introduction to Political Philosophy** _Jonathan Wolff_
-- ![The Social Contract](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1388197284l/12651.jpg)
-  **The Social Contract** _Jean-Jacques Rousseau_
-- ![On Liberty](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1555338584l/385228._SY475_.jpg)
-  **On Liberty** _John Stuart Mill_
-- ![What Does it All Mean?](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347684253l/100021.jpg)
-  **What Does it All Mean?** _Thomas Nagel_
+![Good Economics for Hard Times](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1562348201l/51014619._SX318_SY475_.jpg)
+**Good Economics for Hard Times** _Abhijit V. Banerjee and Esther Duflo_
 
-</Grid>
+![Freakonomics](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1550917827l/1202._SX318_.jpg)
+**Freakonomics: A Rogue Economist Explores the Hidden Side of Everything** _Steven D. Levitt and Stephen J. Dubner_
+
+![The Invention of Russia](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1453057553l/27246121.jpg)
+**The Invention of Russia** _Arkady Ostrovsky_
+
+![An Introduction to Political Philosophy](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1386920670l/31851.jpg)
+**An Introduction to Political Philosophy** _Jonathan Wolff_
+
+![The Social Contract](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1388197284l/12651.jpg)
+**The Social Contract** _Jean-Jacques Rousseau_
+
+![On Liberty](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1555338584l/385228._SY475_.jpg)
+**On Liberty** _John Stuart Mill_
+
+![What Does it All Mean?](https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347684253l/100021.jpg)
+**What Does it All Mean?** _Thomas Nagel_
+
+</Books>
