--- a/src/pages/posts/2020-06-14-Summer_Reading.mdx
+++ b/src/pages/posts/2020-06-14-Summer_Reading.mdx
@@ -5,7 +5,7 @@ import Construction from "../../components/construction"
 
 <Construction />
 
-I love to read. Here's a collection of the books that I am aiming to read this summer. Some are required for school and some are not, but in my opinion, they're all pretty intereesting. As I finish these books, I will be writing posts about them.
+I love to read. Here is a collection of the books that I am aiming to read this summer. Some are required for school and some are not, but in my opinion, they're all pretty intereesting. As I finish these books, I will be writing posts about them.
 
 <Books >
 
