Name -- personal narrative

--- a/src/pages/posts/2020-06-27-Thoughts-on-the-renaming-of-the-woodrow-wilson-school-at-princeton.mdx
+++ b/src/pages/posts/2020-06-27-Thoughts-on-the-renaming-of-the-woodrow-wilson-school-at-princeton.mdx
@@ -1,3 +1,8 @@
 import Construction from "../../components/construction"
 
 <Construction />
+
+# Thoughts on the Renaming of the Woodrow Wilson School at Princeton
+
+In pursuit of racial equality, and in commitment to diversity and inclusion, the Board of Trustees of Princeton University have voted to rename the Woodrow Wilson School of Public and International Affairs to the Princeton School of Public and International Affairs. I disagree with this action. I understand that President Wilson was a 
+
